Fixed a major bug where the sidekick units collapsed on mobile devices...

--- a/scss/mobile/modules/_sidekickUnit.scss
+++ b/scss/mobile/modules/_sidekickUnit.scss
@@ -67,7 +67,7 @@
 }
 
 .sidekick-unit-bit {
-  flex: 0 0 100%;
+  flex: 0 0 auto;
 
   position: relative;
 
